change the info

--- a/index.html
+++ b/index.html
@@ -724,9 +724,9 @@
                         mollitia inventore?
                       </p>
                       <ul class="list-ico">
-                        <li><span class="bi bi-geo-alt"></span> 329 WASHINGTON ST BOSTON, MA 02108</li>
-                        <li><span class="bi bi-phone"></span> (617) 557-0089</li>
-                        <li><span class="bi bi-envelope"></span> contact@example.com</li>
+                        <li><span class="bi bi-geo-alt"></span>New Chandigarh, Punjab - India 140110</li>
+                        <li><span class="bi bi-phone"></span> (+91) 98550-23924</li>
+                        <li><span class="bi bi-envelope"></span> fatehsingh.sunny5@gmail.com</li>
                       </ul>
                     </div>
                     <div class="socials">
