--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
           <h1 class="hero-title mb-4">I am Fateh Singh</h1>
           <p class="hero-subtitle"><span class="typed" data-typed-items="DevOps Engineer, Software Engineer"></span></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
+          <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="assets/files/Fateh_Singh_Resume.pdf" role="button" target="_blank" download>Find My Resume</a></p>
         </div>
       </div>
     </div>
