add testimonial from client

--- a/index.html
+++ b/index.html
@@ -513,13 +513,13 @@
                 <div class="swiper-slide">
                   <div class="testimonial-box">
                     <div class="author-test">
-                      <img src="assets/img/testimonial-2.jpg" alt="" class="rounded-circle b-shadow-a">
-                      <span class="author">Xavi Alonso</span>
+                      <img src="assets/img/paramjit.jpg" alt="" class="rounded-circle b-shadow-a">
+                      <span class="author">Paramjit Singh</span>
                     </div>
                     <div class="content-test">
                       <p class="description lead">
-                        Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Lorem ipsum dolor sit amet,
-                        consectetur adipiscing elit.
+                        Fateh Singh's expertise as a DevOps engineer is invaluable,
+                        consistently driving seamless integration and deployment processes.
                       </p>
                     </div>
                   </div>
