add information about me

--- a/index.html
+++ b/index.html
@@ -146,21 +146,23 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id
-                      imperdiet et, porttitor
-                      at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla
-                      porttitor accumsan tincidunt.
+                      With a robust background spanning Nine years in the dynamic field of Information Technology,
+                      I bring a wealth of experience across various domains.
+                      My journey began with 1.6 years as a PHP developer, where I honed my skills in crafting dynamic
+                      and efficient web solutions. Later, I delved into the realm of Ruby on Rails development, dedicating
+                      three years to mastering the details of this powerful framework.
                     </p>
                     <p class="lead">
-                      Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis
-                      porttitor volutpat. Vestibulum
-                      ac diam sit amet quam vehicula elementum sed sit amet dui. porttitor at sem.
+                      Over the last four years, I have immersed myself in the world of DevOps, leveraging my expertise
+                      to streamline and optimize development
+                      and operational processes. This multifaceted experience has equipped me with a diverse skill set,
+                      allowing me to navigate the evolving landscape of IT seamlessly.
                     </p>
-                    <p class="lead">
+                    <!-- <p class="lead">
                       Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
                       Nulla porttitor accumsan
                       tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
-                    </p>
+                    </p> -->
                   </div>
                 </div>
               </div>
