--- a/index.html
+++ b/index.html
@@ -725,11 +725,9 @@
                     </div>
                     <div class="more-info">
                       <p class="lead">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorum dolorem soluta quidem
-                        expedita aperiam aliquid at.
-                        Totam magni ipsum suscipit amet? Autem nemo esse laboriosam ratione nobis
-                        mollitia inventore?
+                        Whether you have a question, want to collaborate, or simply want to say hello, we'd love to hear from you! Feel free to reach out to us using the contact information provided below:
                       </p>
+                      <p>We look forward to hearing from you!</p>
                       <ul class="list-ico">
                         <li><span class="bi bi-geo-alt"></span>New Chandigarh, Punjab - India 140110</li>
                         <li><span class="bi bi-phone"></span> (+91) 98550-23924</li>
@@ -756,26 +754,27 @@
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-  <footer>
+  <!-- <footer>
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
           <div class="copyright-box">
             <p class="copyright">&copy; Copyright <strong>DevFolio</strong>. All Rights Reserved</p>
-            <div class="credits">
+            <div class="credits"> -->
               <!--
               All the links in the footer should remain intact.
               You can delete the links only if you purchased the pro version.
               Licensing information: https://bootstrapmade.com/license/
               Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=DevFolio
             -->
-              Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+              <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </footer><!-- End  Footer -->
+  </footer> -->
+  <!-- End  Footer -->
 
   <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
